Click function, beta v1

--- a/PWS/OFS.ini
+++ b/PWS/OFS.ini
@@ -72,9 +72,9 @@ Loot_ID							0x114
 Loot_WID						0x110
 Loot_Type						0x150
 //------------------------------------------------------
-action_1						0x4E24D0
-action_2						0x4E7C90
-action_3						0x4E35F0
+action_1						0x4E4F20
+action_2						0x4EA650
+action_3						0x4E5FE0
 //------------------------------------------------------
 BeastStruct						0xE224D8
 BS_ArrayBegin					0x00
