--- a/PWS/OFS.ini
+++ b/PWS/OFS.ini
@@ -40,6 +40,8 @@ Player_EqFairy_Lvl				0x70
 Player_EqFairy_FSC				0x74
 Player_Action_Struct			0x15BC
 Player_Inventory_Struct			0x1158
+Player_Skill_Array				0x15E8
+Player_Skill_Count				0x15EC
 //------------------------------------------------------
 Inventory_Array					0xC
 Inventory_MaxSize				0x14
