--- a/PWS/App.config
+++ b/PWS/App.config
@@ -3,9 +3,9 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="PWS.Properties.Settings.ShopDBCS" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\PwDB.mdb;Persist Security Info=True" providerName="System.Data.OleDb"/>
+        <add name="PwBot.Properties.Settings.ShopDBCS" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\PwDB.mdb;Persist Security Info=True" providerName="System.Data.OleDb"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
 </configuration>
