--- a/PWS/OFS.ini
+++ b/PWS/OFS.ini
@@ -1,4 +1,4 @@
-﻿BA								0xDFCBA0
+﻿BA								0xE7D398
 GA_OFS							0x1C
 MS_OFS							0x1C
 //------------------------------------------------------
@@ -6,7 +6,7 @@ LOCATION_ID						0x90
 LOCATION_NAME					0x60
 LOCATION_NAME_OFS				0x4
 //------------------------------------------------------
-SendPacket						0x7F2560
+SendPacket						0x843AD0
 NTDLL_CriticalSectionPtr		0x560B750
 NTDLL_EnterCriticalSection		0xC2F2CC
 NTDLL_LeaveCriticalSection		0xC2F2D0
@@ -26,22 +26,22 @@ Gui_Win_Ctrl_Function			0x1C
 Gui_Win_Ctrl_Next				0xC
 //------------------------------------------------------
 PlayerStruct					0x34
-PlayerName						0x748
+PlayerName						0x80C
 Player_LocX						0x3C
 Player_LocY						0x44
 Player_LocZ						0x40
-Player_ID						0x4B4
-Player_Lvl						0x4C0
+Player_ID						0x4B8
+Player_Lvl						0x4C4
 Player_WalkMode					0x758
-Player_FlyId					0x5F4
-Player_EqFairyId				0x634
-Player_EqFairy_Arr				0x404
-Player_EqFairy_Lvl				0x70
-Player_EqFairy_FSC				0x74
-Player_Action_Struct			0x15BC
-Player_Inventory_Struct			0x1158
-Player_Skill_Array				0x15E8
-Player_Skill_Count				0x15EC
+Player_FlyId					0x6AC
+//Player_EqFairyId				0x634
+//Player_EqFairy_Arr				0x404
+//Player_EqFairy_Lvl				0x70
+//Player_EqFairy_FSC				0x74
+Player_Action_Struct			0x16E4
+Player_Inventory_Struct			0x1280
+Player_Skill_Array				0x1710
+Player_Skill_Count				0x1714
 //------------------------------------------------------
 Inventory_Array					0xC
 Inventory_MaxSize				0x14
@@ -78,7 +78,7 @@ action_1						0x4E4F20
 action_2						0x4EA650
 action_3						0x4E5FE0
 //------------------------------------------------------
-BeastStruct						0xE224D8
+BeastStruct						0xEA4D50
 BS_ArrayBegin					0x00
 BS_ArrayEnd						0x04
 BS_EnemyArrayBegin				0x30
@@ -99,7 +99,7 @@ BS_BL_Elements					0x10
 BS_BI_ID						0x00
 BS_BI_Count						0x04
 //------------------------------------------------------
-PL_BS_Struct					0x1928
+PL_BS_Struct					0x1A50
 PL_BS_P1						0x18
 PL_BS_P2						0xA4
 PL_BS_Begin						0x00
