--- a/PWS/OFS.ini
+++ b/PWS/OFS.ini
@@ -7,9 +7,10 @@ LOCATION_NAME					0x60
 LOCATION_NAME_OFS				0x4
 //------------------------------------------------------
 SendPacket						0x843AD0
-NTDLL_CriticalSectionPtr		0x560B750
-NTDLL_EnterCriticalSection		0xC2F2CC
-NTDLL_LeaveCriticalSection		0xC2F2D0
+//------------------------------------------------------
+action_1						0x4E6FB0
+action_2						0x4EC720
+action_3						0x4E8080
 //------------------------------------------------------
 Gui_O1							0x18
 Gui_O2							0x8
@@ -32,12 +33,12 @@ Player_LocY						0x44
 Player_LocZ						0x40
 Player_ID						0x4B8
 Player_Lvl						0x4C4
-Player_WalkMode					0x758
+Player_WalkMode					0x81C
 Player_FlyId					0x6AC
-//Player_EqFairyId				0x634
-//Player_EqFairy_Arr				0x404
-//Player_EqFairy_Lvl				0x70
-//Player_EqFairy_FSC				0x74
+Player_EqFairy_Arr				0x408
+Player_EqFairy_Id				0x60
+Player_EqFairy_Lvl				0x70
+Player_EqFairy_FSC				0x74
 Player_Action_Struct			0x16E4
 Player_Inventory_Struct			0x1280
 Player_Skill_Array				0x1710
@@ -50,7 +51,7 @@ Inventory_Item_Type				0x8
 Inventory_Item_Count			0x14
 Inventory_Item_Price			0x1C
 Inventory_Item_MaxCount			0x18
-Inventory_Item_Fairy_INF		0xEC
+Inventory_Item_Fairy_INF		0xF4
 //------------------------------------------------------
 Mob_Struct						0x20
 Mob_Count						0x18
@@ -73,10 +74,6 @@ Loot_LocZ						0x40
 Loot_ID							0x114
 Loot_WID						0x110
 Loot_Type						0x150
-//------------------------------------------------------
-action_1						0x4E4F20
-action_2						0x4EA650
-action_3						0x4E5FE0
 //------------------------------------------------------
 BeastStruct						0xEA4D50
 BS_ArrayBegin					0x00
