--- a/PWS/PwBot.csproj
+++ b/PWS/PwBot.csproj
@@ -74,12 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsmCode.cs" />
     <Compile Include="AutoLogin.cs" />
-    <Compile Include="Beast.cs" />
-    <Compile Include="BeastFactory.cs" />
-    <Compile Include="Character.cs" />
-    <Compile Include="Client.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Debug.cs">
       <SubType>Form</SubType>
@@ -87,8 +82,6 @@
     <Compile Include="Debug.Designer.cs">
       <DependentUpon>Debug.cs</DependentUpon>
     </Compile>
-    <Compile Include="EF.cs" />
-    <Compile Include="Fairy.cs" />
     <Compile Include="LoginEditForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,16 +106,6 @@
     <Compile Include="PwBot.Designer.cs">
       <DependentUpon>PwBot.cs</DependentUpon>
     </Compile>
-    <Compile Include="Inventory.cs" />
-    <Compile Include="Item.cs" />
-    <Compile Include="Level.cs" />
-    <Compile Include="Location.cs" />
-    <Compile Include="Logging.cs" />
-    <Compile Include="Memory.cs" />
-    <Compile Include="NPC.cs" />
-    <Compile Include="Environment.cs" />
-    <Compile Include="OFS.cs" />
-    <Compile Include="Packet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PwDataSet.cs">
@@ -133,11 +116,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>PwDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Skill.cs" />
-    <Compile Include="THH.cs" />
-    <Compile Include="Utils.cs" />
-    <Compile Include="GUI.cs" />
-    <Compile Include="Web.cs" />
+    <Compile Include="LU.cs" />
     <EmbeddedResource Include="Debug.resx">
       <DependentUpon>Debug.cs</DependentUpon>
     </EmbeddedResource>
@@ -241,6 +220,12 @@
     <Content Include="PwDB.mdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PwLib\PwLib\PwLib.csproj">
+      <Project>{7ce2758a-3167-4c45-863f-085bcd653cf9}</Project>
+      <Name>PwLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
