--- a/PwLib/PwLib/PwLib.csproj
+++ b/PwLib/PwLib/PwLib.csproj
@@ -63,6 +63,11 @@
     <Compile Include="Utils.cs" />
     <Compile Include="Web.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="OFS.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
