--- a/PwLib/OFS.ini
+++ b/PwLib/OFS.ini
@@ -104,3 +104,8 @@ PL_BS_End						0x04
 PL_BS_Length					0x64
 PL_BS_Item_ID2					0x00
 PL_BS_Item_ID1					0x04
+//------------------------------------------------------
+P_Kom_Array						0x197C
+Kom_Buy							0x60
+Kom_Sell						0x7C
+Kom_Store						0xA0
