--- a/PwLib/OFS.ini
+++ b/PwLib/OFS.ini
@@ -1,4 +1,4 @@
-﻿BA								0xE7D398
+﻿BA								0xF39878
 GA_OFS							0x1C
 MS_OFS							0x1C
 //------------------------------------------------------
@@ -6,7 +6,7 @@ LOCATION_ID						0x90
 LOCATION_NAME					0x60
 LOCATION_NAME_OFS				0x4
 //------------------------------------------------------
-SendPacket						0x843AD0
+SendPacket						0x898A70
 //------------------------------------------------------
 action_1						0x4E6FB0
 action_2						0x4EC720
@@ -27,7 +27,7 @@ Gui_Win_Ctrl_Function			0x1C
 Gui_Win_Ctrl_Next				0xC
 //------------------------------------------------------
 PlayerStruct					0x34
-PlayerName						0x80C
+PlayerName						0x810
 Player_LocX						0x3C
 Player_LocY						0x44
 Player_LocZ						0x40
