--- a/PwLib/OFS.ini
+++ b/PwLib/OFS.ini
@@ -2,7 +2,7 @@
 GA_OFS							0x1C
 MS_OFS							0x1C
 //------------------------------------------------------
-LOCATION_ID						0x90
+LOCATION_ID						0x94
 LOCATION_NAME					0x60
 LOCATION_NAME_OFS				0x4
 //------------------------------------------------------
@@ -40,7 +40,8 @@ Player_EqFairy_Id				0x60
 Player_EqFairy_Lvl				0x70
 Player_EqFairy_FSC				0x74
 Player_Action_Struct			0x16E4
-Player_Inventory_Struct			0x1280
+Player_Inventory_Struct			0x131C
+//-- 0x1280
 Player_Skill_Array				0x1710
 Player_Skill_Count				0x1714
 //------------------------------------------------------
@@ -75,7 +76,7 @@ Loot_ID							0x114
 Loot_WID						0x110
 Loot_Type						0x150
 //------------------------------------------------------
-BeastStruct						0xEA4D50
+BeastStruct						0xF62F78
 BS_ArrayBegin					0x00
 BS_ArrayEnd						0x04
 BS_EnemyArrayBegin				0x30
@@ -96,7 +97,7 @@ BS_BL_Elements					0x10
 BS_BI_ID						0x00
 BS_BI_Count						0x04
 //------------------------------------------------------
-PL_BS_Struct					0x1A50
+PL_BS_Struct					0x1B18
 PL_BS_P1						0x18
 PL_BS_P2						0xA4
 PL_BS_Begin						0x00
