--- a/PwLib/OFS.ini
+++ b/PwLib/OFS.ini
@@ -3,8 +3,6 @@ GA_OFS							0x1C
 MS_OFS							0x1C
 //------------------------------------------------------
 LOCATION_ID						0x94
-LOCATION_NAME					0x60
-LOCATION_NAME_OFS				0x4
 //------------------------------------------------------
 SendPacket						0x898A70
 //------------------------------------------------------
@@ -20,7 +18,7 @@ Gui_Win_Current					0x74
 Gui_Win_Ptr						0x8
 Gui_Win_Name					0x4C
 Gui_Win_Visibility				0x90
-Gui_Win_Ctrl_Array				0x1C8
+Gui_Win_Ctrl_Array				0x1E0
 Gui_Win_Ctrl_Ptr				0x8
 Gui_Win_Ctrl_Name				0x18
 Gui_Win_Ctrl_Function			0x1C
