--- a/PwLib/OFS.ini
+++ b/PwLib/OFS.ini
@@ -23,6 +23,7 @@ Gui_Win_Ctrl_Ptr				0x8
 Gui_Win_Ctrl_Name				0x18
 Gui_Win_Ctrl_Function			0x1C
 Gui_Win_Ctrl_Next				0xC
+Gui_Function					0x34
 //------------------------------------------------------
 PlayerStruct					0x34
 PlayerName						0x810
