--- a/PwLib/OFS.ini
+++ b/PwLib/OFS.ini
@@ -105,7 +105,7 @@ PL_BS_Length					0x64
 PL_BS_Item_ID2					0x00
 PL_BS_Item_ID1					0x04
 //------------------------------------------------------
-P_Kom_Array						0x197C
+P_Kom_Array						0x1A2C
 Kom_Buy							0x60
 Kom_Sell						0x7C
 Kom_Store						0xA0
