--- a/PwBot/PwBot.csproj
+++ b/PwBot/PwBot.csproj
@@ -57,10 +57,6 @@
     <ApplicationIcon>paw.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -74,32 +70,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutoLogin.cs" />
-    <Compile Include="Config.cs" />
-    <Compile Include="Debug.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Debug.Designer.cs">
-      <DependentUpon>Debug.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LoginEditForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="LoginEditForm.Designer.cs">
-      <DependentUpon>LoginEditForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LoginAddForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="LoginAddForm.Designer.cs">
-      <DependentUpon>LoginAddForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LoginDeleteForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="LoginDeleteForm.Designer.cs">
-      <DependentUpon>LoginDeleteForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="PwBot.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,27 +78,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PwDataSet.cs">
-      <DependentUpon>PwDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="PwDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>PwDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="LU.cs" />
-    <EmbeddedResource Include="Debug.resx">
-      <DependentUpon>Debug.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LoginEditForm.resx">
-      <DependentUpon>LoginEditForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LoginAddForm.resx">
-      <DependentUpon>LoginAddForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LoginDeleteForm.resx">
-      <DependentUpon>LoginDeleteForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="PwBot.resx">
       <DependentUpon>PwBot.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -146,7 +95,6 @@
     <None Include="app.manifest">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -156,17 +104,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="PwDataSet.xsc">
-      <DependentUpon>PwDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="PwDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>PwDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="PwDataSet.xss">
-      <DependentUpon>PwDataSet.xsd</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -174,7 +111,7 @@
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6">
       <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.6 %28x86 and x64%29</ProductName>
+      <ProductName>Microsoft .NET Framework 4.6 %28x86 и x64%29</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -214,11 +151,12 @@
     <Content Include="icons\025.png" />
     <Content Include="icons\026.jpg" />
     <Content Include="paw.ico" />
-    <Content Include="PwDB.mdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\FL\FL.csproj">
+      <Project>{8910332e-8197-45b3-80cc-2836480c661e}</Project>
+      <Name>FL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PwLib\PwLib.csproj">
       <Project>{7ce2758a-3167-4c45-863f-085bcd653cf9}</Project>
       <Name>PwLib</Name>
