--- a/PwLib/OFS.ini
+++ b/PwLib/OFS.ini
@@ -6,9 +6,9 @@ LOCATION_ID						0x94
 //------------------------------------------------------
 SendPacket						0x898A70
 //------------------------------------------------------
-action_1						0x4E6FB0
-action_2						0x4EC720
-action_3						0x4E8080
+action_1						0x4EC320
+action_2						0x4F1A80
+action_3						0x4ED430
 //------------------------------------------------------
 Gui_O1							0x18
 Gui_O2							0x8
@@ -32,17 +32,15 @@ Player_LocY						0x44
 Player_LocZ						0x40
 Player_ID						0x4B8
 Player_Lvl						0x4C4
-Player_WalkMode					0x81C
+Player_WalkMode					0x820
+Player_ClassId					0x814
 Player_FlyId					0x6AC
 Player_EqFairy_Arr				0x408
 Player_EqFairy_Id				0x60
 Player_EqFairy_Lvl				0x70
 Player_EqFairy_FSC				0x74
-Player_Action_Struct			0x16E4
+Player_Action_Struct			0x1780
 Player_Inventory_Struct			0x131C
-//-- 0x1280
-Player_Skill_Array				0x1710
-Player_Skill_Count				0x1714
 //------------------------------------------------------
 Inventory_Array					0xC
 Inventory_MaxSize				0x14
@@ -74,6 +72,10 @@ Loot_LocZ						0x40
 Loot_ID							0x114
 Loot_WID						0x110
 Loot_Type						0x150
+//------------------------------------------------------
+Players_Struct					0x1C
+Players_Count					0x18
+Players_Array					0x98
 //------------------------------------------------------
 BeastStruct						0xF62F78
 BS_ArrayBegin					0x00
